Update overflow name bug

--- a/$code/drivestyle.css
+++ b/$code/drivestyle.css
@@ -95,6 +95,7 @@ div.dv_title {
     font-size: 200%;
     font-weight: bold;
     color: #0080ff;
+    white-space: nowrap;
 }
 .body_page {
     position: absolute;
